--- a/functions/package.json
+++ b/functions/package.json
@@ -16,13 +16,14 @@
     "node": "20"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^4.0.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
-    "@google-cloud/pubsub": "^4.0.0"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.3.0"
   },
   "private": true
 }
