--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@google-cloud/pubsub": "^4.0.0",
+    "axios": "^1.13.5",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
     "node-fetch": "^2.7.0"
